--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,17 @@
   }
 }
 
+.App {
+  background-color: black;
+  /* height: 100vh; */
+  width: 100%;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -28,10 +39,42 @@
   color: #61dafb;
 }
 
+button {
+  padding: 20px;
+  border-radius: 5px;
+  background-color: white;
+  color: black;
+  font-weight: 600;
+  font-size: large;
+  border: none;
+  outline: none;
+}
+
+button:hover {
+  color: white;
+  background-color: rgba(0, 0, 0, 0.464);
+  cursor: pointer;
+}
+
+button:active {
+  color: black;
+  background-color: white;
+}
+
+.advice-container {
+  border: 1px solid white;
+border-radius: 7px;
+padding: 40px;
+width: 60%;
+color: white;
+background-color: black;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
